# logViewer

./: .env.example  .env.production.example  .gitignore  DEPLOY_FRONTEND_VERCEL.md  DEVELOPER_JOURNEY.md  DOCKER.md  ENVIRONMENTS.md  FLOW_DIAGRAM.md  FRONTEND_ARCHITECTURE.md  FRONTEND_CHECKLIST.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_URLS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_DEPLOY_FRONTEND.md  README-DOCKER.md  README.md  SDK-API-DESIGN.md  SDK-QUICK-START.md  SDK-USAGE.md  SESSION_PROMPT.txt  SETUP-SDK.md  START_HERE.md  deploy-production.ps1  deploy-production.sh  docker-compose.prod.yml  docker-compose.yml  guide.md  install-sdk.ps1  install-sdk.sh  requirements.txt  run_server.ps1  sentry-key.pem  start.ps1  start.sh  start_services.sh
.claude/: settings.local.json
backend/: README.md  install_deps.py  main.py  run_server.py  test_backend.py
backend/app/: ex_classifier.py  main.py  path.py
docs/: idea.md  references.md  working-notes.md
examples/: README.md
examples/myApp/: Dockerfile  README.md  main.py  requirements.txt  start.ps1
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
myApp/: Dockerfile  README.md  main.py  requirements.txt  start.sh  start_server.sh
sdk/python/: README.md  pyproject.toml
sdk/python/sentry_logger/: __init__.py  cli.py  config.py  handler.py  local_config.py
sentry/: .env.example  Dockerfile  Dockerfile.prod  envSet.ps1  requirements.prod.txt  requirements.txt  run_server.ps1  run_server.sh  start.ps1  start.sh
(+71 files in other folders)
